--- a/Example/ImageSelector/Info.plist
+++ b/Example/ImageSelector/Info.plist
@@ -22,6 +22,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Access to camera</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Access to photo</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
